# ads

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/ads/: alloc.h  darray.h
src/: darray.c
tests/: CMakeLists.txt  darray_tests.c  tests.h
